[tool.poetry]
name = "my-single-file"
version = "0.1.0"
description = ""
authors = ["Ilja Orlovs <vrghost@gmail.com>"]
readme = "README.md"
packages = [
    {include = "mymod"}
]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
